--- a/examples/pysindy.ipynb
+++ b/examples/pysindy.ipynb
@@ -32,9 +32,9 @@
     "from dctkit.physics import burgers as b\n",
     "import math\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import gmsh\n",
+    "#import gmsh\n",
     "\n",
-    "gmsh.initialize()"
+    "#gmsh.initialize()"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "1e686b72-9bc0-4377-a852-3bac197e983d",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "b7c65868-076f-41de-85e9-c5c71c5a8692",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "82221d60-ee49-468c-bfe0-52903d18ab63",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "34581f2e-dbf3-4ec8-b1b0-9cb07db0eccf",
    "metadata": {},
    "outputs": [],
