--- a/examples/ex1.ipynb
+++ b/examples/ex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "        prb.set_obj_args(args)\n",
     "\n",
     "        # minimize the objective\n",
-    "        x = prb.run(x0=u_0.coeffs, ftol_abs=1e-12, ftol_rel=1e-12, maxeval=1000)\n",
+    "        x = prb.solve(x0=u_0.coeffs, ftol_abs=1e-12, ftol_rel=1e-12, maxeval=1000)\n",
     "\n",
     "        if (prb.last_opt_result == 1 or prb.last_opt_result == 3\n",
     "                or prb.last_opt_result == 4):\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-10 11:10:28,600\tINFO worker.py:1625 -- Started a local Ray instance.\n"
+      "\u001b[2m\u001b[36m(pid=11470)\u001b[0m [nexus7:11470] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
+      "2024-02-02 10:57:14,495\tINFO worker.py:1625 -- Started a local Ray instance.\n"
      ]
     },
     {
@@ -212,7 +213,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(eval_fitness pid=626054)\u001b[0m 2023-07-10 11:10:29.701219: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:268] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+      "\u001b[2m\u001b[36m(pid=14984)\u001b[0m [nexus7:14984] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n",
+      "\u001b[2m\u001b[36m(eval_fitness pid=14980)\u001b[0m 2024-02-02 10:57:15.756862: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "\u001b[2m\u001b[36m(eval_fitness pid=14980)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
@@ -222,50 +225,50 @@
       "DONE.\n",
       "   \t     \t           fitness            \t             size             \n",
       "   \t     \t------------------------------\t------------------------------\n",
-      "gen\tevals\tmin\tavg  \tmax   \tstd   \tmin\tavg \tmax\tstd   \n",
-      "1  \t100  \t0.7\t2.954\t3.2333\t0.2667\t3  \t4.46\t7  \t1.4312\n",
-      "The best individual of this generation is: AddP0(InvSt0d1(St0d1(f)), delP1(dP0(u)))\n",
-      "2  \t100  \t0.7\t2.805\t3.0333\t0.2885\t3  \t3.22\t9  \t0.8436\n",
-      "The best individual of this generation is: AddP0(InvSt0d1(St0d1(f)), delP1(dP0(u)))\n",
-      "3  \t100  \t0.7\t2.7738\t2.8333\t0.3387\t3  \t3.16\t9  \t0.9243\n",
-      "The best individual of this generation is: AddP0(InvSt0d1(St0d1(f)), delP1(dP0(u)))\n",
-      "4  \t100  \t0.7\t2.7331\t2.8333\t0.4372\t3  \t3.26\t9  \t1.1543\n",
-      "The best individual of this generation is: AddP0(InvSt0d1(St0d1(f)), delP1(dP0(u)))\n",
-      "5  \t100  \t0.7\t2.6153\t2.8333\t0.6215\t3  \t3.6 \t11 \t1.755 \n",
-      "The best individual of this generation is: AddP0(InvSt0d1(St0d1(f)), delP1(dP0(u)))\n",
-      "6  \t100  \t0.7\t2.459 \t2.8333\t0.7756\t3  \t4.05\t12 \t2.2511\n",
-      "The best individual of this generation is: AddP0(InvSt0d1(St0d1(f)), delP1(dP0(u)))\n",
-      "7  \t100  \t0.7\t2.194 \t2.8333\t0.9351\t3  \t4.69\t12 \t2.5679\n",
-      "The best individual of this generation is: AddP0(InvSt0d1(St0d1(f)), delP1(dP0(u)))\n",
-      "8  \t100  \t0.5\t1.6527\t2.8333\t0.9914\t3  \t6.1 \t12 \t2.816 \n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
-      "9  \t100  \t0.5\t0.9334\t2.8333\t0.4625\t3  \t8   \t12 \t1.8601\n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
-      "10 \t100  \t0.5\t0.7363\t0.9   \t0.1072\t5  \t7.36\t9  \t1.0726\n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
-      "11 \t100  \t0.5\t0.674 \t0.7   \t0.0673\t5  \t6.74\t7  \t0.6726\n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
-      "12 \t100  \t0.5\t0.652 \t0.7   \t0.0854\t5  \t6.52\t7  \t0.8542\n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
-      "13 \t100  \t0.5\t0.614 \t0.7   \t0.099 \t5  \t6.14\t7  \t0.9902\n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
-      "14 \t100  \t0.5\t0.56  \t0.7   \t0.0917\t5  \t5.6 \t7  \t0.9165\n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
+      "gen\tevals\tmin\tavg  \tmax   \tstd   \tmin\tavg\tmax\tstd   \n",
+      "1  \t100  \t0.7\t2.918\t3.2333\t0.2552\t3  \t4.1\t7  \t1.2767\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), St1D1(St1P0(f)))\n",
+      "2  \t100  \t0.5\t2.7753\t3.0333\t0.3791\t3  \t3.18\t7  \t0.6983\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "3  \t100  \t0.5\t2.727 \t2.8333\t0.4645\t3  \t3.2 \t9  \t0.9165\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "4  \t100  \t0.5\t2.6728\t2.8333\t0.5471\t3  \t3.41\t11 \t1.4839\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "5  \t100  \t0.5\t2.6058\t2.8333\t0.6409\t3  \t3.69\t19 \t2.2212\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "6  \t100  \t0.5\t2.5172\t2.8333\t0.7222\t3  \t4.05\t19 \t2.6053\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "7  \t100  \t0.5\t2.4368\t2.8333\t0.7897\t3  \t4.45\t19 \t3.2661\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "8  \t100  \t0.5\t2.1291\t2.8333\t0.9456\t3  \t5.41\t19 \t3.795 \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "9  \t100  \t0.5\t1.7565\t2.8333\t0.9611\t3  \t6.89\t19 \t4.0247\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "10 \t100  \t0.5\t0.9653\t2.5333\t0.4509\t5  \t8.86\t19 \t3.1781\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "11 \t100  \t0.5\t0.6796\t0.9327\t0.1204\t5  \t6.76\t9  \t1.1412\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "12 \t100  \t0.5\t0.624 \t0.7   \t0.0971\t5  \t6.24\t7  \t0.9708\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "13 \t100  \t0.5\t0.576 \t0.7   \t0.0971\t5  \t5.76\t7  \t0.9708\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "14 \t100  \t0.5\t0.508 \t0.7   \t0.0392\t5  \t5.08\t7  \t0.3919\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       "15 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       "16 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       "17 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       "18 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       "19 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       "20 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddP0(f, delP1(dP0(u)))\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       " -= END OF EVOLUTION =- \n",
       "> MODEL TRAINING/SELECTION COMPLETED\n",
-      "The best individual is AddP0(f, delP1(dP0(u)))\n",
+      "The best individual is AddCP0(delP1(cobP0(u)), f)\n",
       "The best fitness on the training set is 0.5\n"
      ]
     },
@@ -273,7 +276,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(eval_fitness pid=626056)\u001b[0m 2023-07-10 11:10:29.961548: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:268] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n"
+      "\u001b[2m\u001b[36m(pid=14979)\u001b[0m [nexus7:14979] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
+      "\u001b[2m\u001b[36m(eval_fitness pid=14983)\u001b[0m 2024-02-02 10:57:16.029649: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
+      "\u001b[2m\u001b[36m(eval_fitness pid=14983)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\u001b[32m [repeated 23x across cluster]\u001b[0m\n"
      ]
     },
     {
@@ -288,7 +293,7 @@
     }
    ],
    "source": [
-    "\n",
+    "ray.shutdown()\n",
     "stgp_poisson()\n"
    ]
   },
