Added poisson 1d test for tox.

--- a/examples/ex1.ipynb
+++ b/examples/ex1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nexus7:39518] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n"
+     ]
+    }
+   ],
    "source": [
     "from dctkit.dec import cochain as C\n",
     "from dctkit.mesh.simplex import SimplicialComplex\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,15 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(pid=11470)\u001b[0m [nexus7:11470] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
-      "2024-02-02 10:57:14,495\tINFO worker.py:1625 -- Started a local Ray instance.\n"
+      "2024-02-12 14:54:22,288\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     },
     {
@@ -213,9 +220,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(pid=14984)\u001b[0m [nexus7:14984] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n",
-      "\u001b[2m\u001b[36m(eval_fitness pid=14980)\u001b[0m 2024-02-02 10:57:15.756862: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "\u001b[2m\u001b[36m(eval_fitness pid=14980)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "\u001b[36m(pid=44718)\u001b[0m [nexus7:44718] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n",
+      "\u001b[36m(eval_fitness pid=44718)\u001b[0m 2024-02-12 14:54:23.520698: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "\u001b[36m(eval_fitness pid=44718)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
@@ -223,52 +230,52 @@
      "output_type": "stream",
      "text": [
       "DONE.\n",
-      "   \t     \t           fitness            \t             size             \n",
-      "   \t     \t------------------------------\t------------------------------\n",
-      "gen\tevals\tmin\tavg  \tmax   \tstd   \tmin\tavg\tmax\tstd   \n",
-      "1  \t100  \t0.7\t2.918\t3.2333\t0.2552\t3  \t4.1\t7  \t1.2767\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), St1D1(St1P0(f)))\n",
-      "2  \t100  \t0.5\t2.7753\t3.0333\t0.3791\t3  \t3.18\t7  \t0.6983\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "3  \t100  \t0.5\t2.727 \t2.8333\t0.4645\t3  \t3.2 \t9  \t0.9165\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "4  \t100  \t0.5\t2.6728\t2.8333\t0.5471\t3  \t3.41\t11 \t1.4839\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "5  \t100  \t0.5\t2.6058\t2.8333\t0.6409\t3  \t3.69\t19 \t2.2212\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "6  \t100  \t0.5\t2.5172\t2.8333\t0.7222\t3  \t4.05\t19 \t2.6053\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "7  \t100  \t0.5\t2.4368\t2.8333\t0.7897\t3  \t4.45\t19 \t3.2661\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "8  \t100  \t0.5\t2.1291\t2.8333\t0.9456\t3  \t5.41\t19 \t3.795 \n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "9  \t100  \t0.5\t1.7565\t2.8333\t0.9611\t3  \t6.89\t19 \t4.0247\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "10 \t100  \t0.5\t0.9653\t2.5333\t0.4509\t5  \t8.86\t19 \t3.1781\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "11 \t100  \t0.5\t0.6796\t0.9327\t0.1204\t5  \t6.76\t9  \t1.1412\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "12 \t100  \t0.5\t0.624 \t0.7   \t0.0971\t5  \t6.24\t7  \t0.9708\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "13 \t100  \t0.5\t0.576 \t0.7   \t0.0971\t5  \t5.76\t7  \t0.9708\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "14 \t100  \t0.5\t0.508 \t0.7   \t0.0392\t5  \t5.08\t7  \t0.3919\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "15 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "16 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "17 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "18 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "19 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
-      "20 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "   \t     \t           fitness           \t             size             \n",
+      "   \t     \t-----------------------------\t------------------------------\n",
+      "gen\tevals\tmin   \tavg   \tmax   \tstd  \tmin\tavg \tmax\tstd   \n",
+      "1  \t100  \t2.7577\t2.9185\t3.2333\t0.114\t3  \t3.93\t10 \t1.2826\n",
+      "The best individual of this generation is: delP1(AddCP1(MFP1(cobP0(u), InnP0(f, f)), cobP0(f)))\n",
+      "2  \t100  \t2.7577\t2.8325\t2.8333\t0.0075\t3  \t3.07\t10 \t0.6965\n",
+      "The best individual of this generation is: delP1(AddCP1(MFP1(cobP0(u), InnP0(f, f)), cobP0(f)))\n",
+      "3  \t100  \t2.7577\t2.8325\t2.8333\t0.0075\t3  \t3.07\t10 \t0.6965\n",
+      "The best individual of this generation is: delP1(AddCP1(MFP1(cobP0(u), InnP0(f, f)), cobP0(f)))\n",
+      "4  \t100  \t2.7577\t2.8318\t2.8333\t0.0106\t3  \t3.14\t10 \t0.98  \n",
+      "The best individual of this generation is: delP1(AddCP1(MFP1(cobP0(u), InnP0(f, f)), cobP0(f)))\n",
+      "5  \t100  \t2.7577\t2.831 \t2.8333\t0.0129\t3  \t3.21\t10 \t1.1941\n",
+      "The best individual of this generation is: delP1(AddCP1(MFP1(cobP0(u), InnP0(f, f)), cobP0(f)))\n",
+      "6  \t100  \t0.7327\t2.8093\t2.8333\t0.2092\t3  \t3.32\t10 \t1.4204\n",
+      "The best individual of this generation is: AddCP0(AddCP0(u, f), delP1(cobP0(u)))\n",
+      "7  \t100  \t0.7327\t2.8078\t2.8333\t0.2093\t3  \t3.46\t10 \t1.6995\n",
+      "The best individual of this generation is: AddCP0(AddCP0(u, f), delP1(cobP0(u)))\n",
+      "8  \t100  \t0.7327\t2.7983\t2.8333\t0.2156\t3  \t3.72\t10 \t2.0692\n",
+      "The best individual of this generation is: AddCP0(AddCP0(u, f), delP1(cobP0(u)))\n",
+      "9  \t100  \t0.7327\t2.7953\t2.8333\t0.2157\t3  \t4   \t10 \t2.4   \n",
+      "The best individual of this generation is: AddCP0(AddCP0(u, f), delP1(cobP0(u)))\n",
+      "10 \t100  \t0.7327\t2.7665\t2.8333\t0.2991\t3  \t4.45\t10 \t2.7618\n",
+      "The best individual of this generation is: AddCP0(AddCP0(u, f), delP1(cobP0(u)))\n",
+      "11 \t100  \t0.7327\t2.69  \t2.8333\t0.4477\t3  \t5.2 \t14 \t3.2218\n",
+      "The best individual of this generation is: AddCP0(AddCP0(u, f), delP1(cobP0(u)))\n",
+      "12 \t100  \t0.7   \t2.5176\t2.8333\t0.6585\t3  \t6.29\t14 \t3.3832\n",
+      "The best individual of this generation is: AddCP0(St1D1(St1P0(f)), delP1(cobP0(u)))\n",
+      "13 \t100  \t0.5   \t2.3141\t2.8333\t0.8041\t3  \t7.59\t21 \t3.4615\n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "14 \t100  \t0.5   \t1.8873\t2.7577\t0.9063\t5  \t9.35\t21 \t2.1926\n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "15 \t100  \t0.5   \t1.3018\t2.7122\t0.7376\t5  \t8.89\t21 \t2.7781\n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "16 \t100  \t0.5   \t0.772 \t1.3   \t0.2095\t5  \t7.38\t13 \t1.8697\n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "17 \t100  \t0.5   \t0.6374\t0.7327\t0.1124\t5  \t6.2 \t7  \t0.9798\n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "18 \t100  \t0.5   \t0.5712\t0.7327\t0.1041\t5  \t5.64\t7  \t0.933 \n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "19 \t100  \t0.5   \t0.508 \t0.7   \t0.0392\t5  \t5.08\t7  \t0.3919\n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "20 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
       " -= END OF EVOLUTION =- \n",
       "> MODEL TRAINING/SELECTION COMPLETED\n",
-      "The best individual is AddCP0(delP1(cobP0(u)), f)\n",
+      "The best individual is AddCP0(f, delP1(cobP0(u)))\n",
       "The best fitness on the training set is 0.5\n"
      ]
     },
@@ -276,9 +283,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(pid=14979)\u001b[0m [nexus7:14979] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
-      "\u001b[2m\u001b[36m(eval_fitness pid=14983)\u001b[0m 2024-02-02 10:57:16.029649: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
-      "\u001b[2m\u001b[36m(eval_fitness pid=14983)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\u001b[32m [repeated 23x across cluster]\u001b[0m\n"
+      "\u001b[36m(pid=44695)\u001b[0m [nexus7:44695] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
+      "\u001b[36m(eval_fitness pid=44706)\u001b[0m 2024-02-12 14:54:23.873825: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
+      "\u001b[36m(eval_fitness pid=44706)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\u001b[32m [repeated 23x across cluster]\u001b[0m\n"
      ]
     },
     {
@@ -321,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
