Renamed some variables.

--- a/examples/ex1.ipynb
+++ b/examples/ex1.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nexus7:917683] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n"
+      "[nexus7:957699] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-16 15:54:26,446\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2024-02-16 16:01:19,448\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     },
     {
@@ -215,9 +215,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36m(pid=918131)\u001b[0m [nexus7:918131] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n",
-      "\u001b[36m(fitness pid=918131)\u001b[0m 2024-02-16 15:54:27.760831: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "\u001b[36m(fitness pid=918131)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "\u001b[36m(pid=958122)\u001b[0m [nexus7:958122] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n",
+      "\u001b[36m(fitness pid=958122)\u001b[0m 2024-02-16 16:01:20.725076: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "\u001b[36m(fitness pid=958122)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
@@ -228,33 +228,33 @@
       "   \t     \t           fitness            \t             size             \n",
       "   \t     \t------------------------------\t------------------------------\n",
       "gen\tevals\tmin\tavg   \tmax   \tstd   \tmin\tavg \tmax\tstd   \n",
-      "1  \t100  \t0.7\t2.8636\t3.2333\t0.4525\t3  \t4.37\t9  \t1.6532\n",
+      "1  \t100  \t0.7\t2.9298\t3.2333\t0.3144\t3  \t4.47\t13 \t1.7231\n",
       "The best individual of this generation is: AddCP0(St1D1(St1P0(f)), delP1(cobP0(u)))\n",
-      "2  \t100  \t0.7\t2.6682\t2.8333\t0.5603\t3  \t3.36\t9  \t1.2452\n",
+      "2  \t100  \t0.7\t2.7472\t2.8333\t0.3831\t3  \t3.4 \t15 \t1.8974\n",
       "The best individual of this generation is: AddCP0(St1D1(St1P0(f)), delP1(cobP0(u)))\n",
-      "3  \t100  \t0.7\t2.6086\t2.8333\t0.64  \t3  \t3.52\t9  \t1.5131\n",
+      "3  \t100  \t0.7\t2.6079\t2.8333\t0.6186\t3  \t3.78\t15 \t2.3263\n",
       "The best individual of this generation is: AddCP0(St1D1(St1P0(f)), delP1(cobP0(u)))\n",
-      "4  \t100  \t0.5\t2.5406\t2.8333\t0.7272\t3  \t3.6 \t9  \t1.562 \n",
+      "4  \t100  \t0.7\t2.3482\t2.8333\t0.8348\t3  \t4.66\t15 \t3.1439\n",
+      "The best individual of this generation is: AddCP0(St1D1(St1P0(f)), delP1(cobP0(u)))\n",
+      "5  \t100  \t0.7\t1.9689\t2.8333\t0.9488\t3  \t6.3 \t20 \t4.1653\n",
+      "The best individual of this generation is: AddCP0(St1D1(St1P0(f)), delP1(cobP0(u)))\n",
+      "6  \t100  \t0.5\t1.508 \t2.8333\t0.8969\t3  \t7.88\t25 \t4.2785\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "5  \t100  \t0.5\t2.3417\t2.8333\t0.8814\t3  \t4.07\t12 \t2.0458\n",
+      "7  \t100  \t0.5\t0.8675\t1.5187\t0.226 \t5  \t8.61\t15 \t2.1858\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "6  \t100  \t0.5\t2.1154\t2.8333\t0.981 \t3  \t4.69\t13 \t2.5522\n",
+      "8  \t100  \t0.5\t0.7262\t0.9   \t0.0828\t5  \t7.25\t9  \t0.8292\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "7  \t100  \t0.5\t1.5812\t2.8333\t1.021 \t3  \t5.75\t13 \t2.5937\n",
+      "9  \t100  \t0.5\t0.688 \t0.7   \t0.0475\t5  \t6.88\t7  \t0.475 \n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "8  \t100  \t0.5\t0.8296\t2.8333\t0.486 \t3  \t7.03\t13 \t1.9721\n",
+      "10 \t100  \t0.5\t0.684 \t0.7   \t0.0543\t5  \t6.84\t7  \t0.5426\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "9  \t100  \t0.5\t0.5984\t0.7327\t0.1049\t5  \t5.94\t7  \t0.9982\n",
+      "11 \t100  \t0.5\t0.668 \t0.7   \t0.0733\t5  \t6.68\t7  \t0.7332\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "10 \t100  \t0.5\t0.544 \t0.7   \t0.0828\t5  \t5.44\t7  \t0.8285\n",
+      "12 \t100  \t0.5\t0.652 \t0.7   \t0.0854\t5  \t6.52\t7  \t0.8542\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "11 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "13 \t100  \t0.5\t0.614 \t0.7   \t0.099 \t5  \t6.14\t7  \t0.9902\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "12 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "13 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "14 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "14 \t100  \t0.5\t0.578 \t0.7   \t0.0975\t5  \t5.78\t7  \t0.9755\n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
       "15 \t100  \t0.5\t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
       "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
@@ -278,9 +278,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36m(pid=918132)\u001b[0m [nexus7:918132] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
-      "\u001b[36m(fitness pid=918132)\u001b[0m 2024-02-16 15:54:28.323426: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
-      "\u001b[36m(fitness pid=918132)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\u001b[32m [repeated 23x across cluster]\u001b[0m\n"
+      "\u001b[36m(pid=958106)\u001b[0m [nexus7:958106] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
+      "\u001b[36m(fitness pid=958106)\u001b[0m 2024-02-16 16:01:21.074937: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:273] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
+      "\u001b[36m(fitness pid=958106)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\u001b[32m [repeated 23x across cluster]\u001b[0m\n"
      ]
     },
     {
